# django-on-aws

./: Dockerfile  README.md  pyproject.toml
app/core/: settings.py
